--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-
+config/
 # macOS
 .DS_Store
 node_modules
@@ -17,6 +17,7 @@ node_modules
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/config
 /node_modules
 /.pnp
 .pnp.js
@@ -41,6 +42,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
