--- a/node/package.json
+++ b/node/package.json
@@ -24,9 +24,10 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
+    "express-session": "^1.17.3",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
