--- a/node/package.json
+++ b/node/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/barrierfree-nimo/Nimo#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
