--- a/RN/package.json
+++ b/RN/package.json
@@ -28,6 +28,7 @@
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
+    "expo-updates": "^0.15.6",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-devtools": "^4.26.1",
