--- a/RN/app.json
+++ b/RN/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "phishing-vaccine}",
+    "name": "피싱백신",
     "slug": "nimo-client",
     "version": "1.0.0",
     "orientation": "portrait",
