--- a/RN/package.json
+++ b/RN/package.json
@@ -22,9 +22,11 @@
     "axios": "^1.1.3",
     "expo": "~46.0.7",
     "expo-asset": "~8.6.1",
+    "expo-av": "~12.0.4",
     "expo-constants": "~13.2.3",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
+    "expo-modules-core": "^1.0.4",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
@@ -50,5 +52,6 @@
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "license": "MIT"
 }
