--- a/node/package.json
+++ b/node/package.json
@@ -26,6 +26,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
