--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,3 +42,17 @@ jobs:
           echo "$ENV" > ./app/node/.env
         env:
           ENV: ${{ secrets.ENV }}
+
+      - name: Executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            sh ~/app/node/config/scripts/deploy.sh
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker rm $(sudo docker ps -a -q)
+            sudo docker rmi $(sudo docker images -q)
+            sudo docker run -p 3000:3000 
+            sudo docker-compose -f ~/app/node/docker-compose.yml up --build -d
