--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: nimo/nimo-server-dev
+          images: nimovaccine/nimo-server-dev
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
