[docs] .env 파일 경로 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Make .env
         run: |
-          touch ./app/node/.env
+          touch ./.env
           echo "$ENV" > ./app/node/.env
         env:
           ENV: ${{ secrets.ENV }}
