--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Make .env
         run: |
           touch ./.env
-          echo "$ENV" > ./app/node/.env
+          echo "$ENV" > ./.env
         env:
           ENV: ${{ secrets.ENV }}
 
