--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,12 +36,30 @@ jobs:
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
+      - name: Create remote directory
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_KEY }}
+          script: mkdir -p ~/app/node
+
       - name: Make .env
         run: |
-          touch ./.env
-          echo "$ENV" > ./.env
+          touch ~/app/node/.env
+          echo "$ENV" > ~/app/node/.env
         env:
           ENV: ${{ secrets.ENV }}
+      
+      - name: copy source via ssh key
+        uses: burnett01/rsync-deployments@4.1
+        with:
+          switches: -avzr --delete
+          remote_path: ~/app/node/
+          remote_host: ${{ secrets.EC2_HOST }}
+          remote_user: ubuntu
+          remote_key: ${{ secrets.EC2_KEY }}
+
 
       - name: Executing remote ssh commands using password
         uses: appleboy/ssh-action@master
