--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,20 +42,20 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
-          script: mkdir -p /home/ubuntu/
+          script: mkdir -p /home/ubuntu/app/
       
       - name: Copy source via ssh key
         uses: burnett01/rsync-deployments@4.1
         with:
           switches: -avzr --delete
-          remote_path: /home/ubuntu/
+          remote_path: /home/ubuntu/app/
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ubuntu
           remote_key: ${{ secrets.EC2_KEY }}
       
       - name: Make .env
         run: |
-          touch /home/ubuntu/node/.env
+          touch /home/ubuntu/app/node/.env
           echo "$ENV" > /home/ubuntu/app/node/.env
         env:
           ENV: ${{ secrets.ENV }}
