--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,13 +42,13 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
-          script: mkdir -p /home/ubuntu/app/
+          script: mkdir -p /home/ubuntu/app/node
       
       - name: Copy source via ssh key
         uses: burnett01/rsync-deployments@4.1
         with:
           switches: -avzr --delete
-          remote_path: /home/ubuntu/app/
+          remote_path: /home/ubuntu/app/node/
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ubuntu
           remote_key: ${{ secrets.EC2_KEY }}
@@ -72,4 +72,4 @@ jobs:
             sudo docker rm $(sudo docker ps -a -q)
             sudo docker rmi $(sudo docker images -q)
             sudo docker run -p 3000:3000 
-            sudo docker-compose -f ~/node/docker-compose.yml up --build -d
+            sudo docker-compose -f ~/app/node/docker-compose.yml up --build -d
