--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
-          script: mkdir -p /home/ubuntu/app/node
+          script: mkdir -p /home/ubuntu/app/
       
       - name: Copy source via ssh key
         uses: burnett01/rsync-deployments@4.1
