--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
       
       - name: Make .env
         run: |
+          echo $PWD
           touch /home/ubuntu/app/node/.env
           echo "$ENV" > /home/ubuntu/app/node/.env
         env:
