--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,8 +58,8 @@ jobs:
       - name: Make .env
         run: |
           echo $PWD
-          touch ./.env
-          echo "$ENV" > ./.env
+          touch /home/ubuntu/app/node/.env
+          echo "$ENV" > /home/ubuntu/app/node/.env
         env:
           ENV: ${{ secrets.ENV }}
 
