--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   db:
     image: mysql:latest
     restart: always
+    env_file:
+      - /node/config/.env
     expose:
       - "3306"
     ports:
@@ -17,3 +19,6 @@ services:
     hostname: backend-dev
     expose:
       - "3000"
+
+      
+    
