--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - "3306"
     ports:
       - "3306:3306"
+    environment:
+      - DOCKER_HOST_IP: ${DOCKER_HOST_IP}
+      - MYSQL_HOST: ${MYSQL_HOST}
+      - MYSQL_USER: ${MYSQL_USER}
+      - MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - /secure/node/config/.env:/Users/suhhyun/Projects/Nimo/node/config/.env
 
