--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
       
       - name: Make .env
         run: |
+          echo "$PATH"
           touch .env
           echo "$ENV" > .env
         env:
