--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,7 @@ jobs:
       
       - name: Make .env
         run: |
-          echo "$PATH"
-          touch .env
+          touch /home/ubuntu/.env
           echo "$ENV" > .env
         env:
           ENV: ${{ secrets.ENV }}
