--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,9 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_KEY }}
-          script: mkdir -p /home/ubuntu/app/
+          script: mkdir -p /home/ubuntu/app/ | touch /home/ubuntu/app/.env | echo "$ENV" > .env
+        env:
+          ENV: ${{ secrets.ENV }}
       
       - name: Copy source via ssh key
         uses: burnett01/rsync-deployments@4.1
@@ -57,7 +59,7 @@ jobs:
       
       - name: Make .env
         run: |
-          touch /home/ubuntu/.env
+          touch .env
           echo "$ENV" > .env
         env:
           ENV: ${{ secrets.ENV }}
