--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           script: |
             mkdir -p /home/ubuntu/app/
             sudo touch /home/ubuntu/app/.env
-            sudo sh -c 'echo "$ENV" > .env' 
+            sudo echo "$ENV" > .env' 
         env:
           ENV: ${{ secrets.ENV }}
       
@@ -59,13 +59,6 @@ jobs:
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ubuntu
           remote_key: ${{ secrets.EC2_KEY }}
-      
-      - name: Make .env
-        run: |
-          touch .env
-          echo "$ENV" > .env
-        env:
-          ENV: ${{ secrets.ENV }}
 
       - name: Executing remote ssh commands using password
         uses: appleboy/ssh-action@master
