--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           script: |
             mkdir -p /home/ubuntu/app/
             sudo touch /home/ubuntu/app/.env
-            sudo echo "$ENV" > .env' 
+            sudo sh -c 'echo "$ENV" > .env' 
         env:
           ENV: ${{ secrets.ENV }}
       
