--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,9 +63,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             touch /home/ubuntu/app/.env
-            echo "$ENV" | sudo tee .env > /dev/null
-        env:
-          ENV: ${{ secrets.ENV }}
+            echo ${{ secrets.ENV }} | sudo tee .env > /dev/null
 
       - name: Executing remote ssh commands using password
         uses: appleboy/ssh-action@master
