--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,15 +55,10 @@ jobs:
           remote_user: ubuntu
           remote_key: ${{ secrets.EC2_KEY }}
 
-      - name: Create .env
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            touch /home/ubuntu/app/.env
-            echo "${{ secrets.ENV }}" | sudo tee -a .env > /dev/null
+      - name: create env file
+        run: |
+          touch .env
+          echo "${{ secrets.ENV }}" >> .env
 
       - name: Executing remote ssh commands using password
         uses: appleboy/ssh-action@master
