--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "3306:3306"
     env_file:
       - .env
+    volumes:
+      - /secure/node/config/.env:/Users/suhhyun/Projects/Nimo/node/config/.env
 
   backend-dev:
     depends_on:
