--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     hostname: backend-dev
     expose:
       - "3000"
+    command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm start'
 
       
     
