--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     image: nimovaccine/nimo-server-dev:dev
     container_name: backend-dev
     hostname: backend-dev
+    env_file:
+      - .env
+    environment:
+      - DB_HOSTNAME=db
     expose:
       - "3000"
     command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm start'
