--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     environment:
       - DB_HOSTNAME=db
     expose:
+      - "3000"
+    ports:
       - "3000:3000"
     command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm start'
 
