--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,13 @@ services:
     hostname: backend-dev
     env_file:
       - .env
-    environment:
-      - DB_HOSTNAME=db
+    # environment:
+    #   - DB_HOSTNAME=db
     expose:
       - "3000"
     ports:
       - "3000:3000"
-    command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm start'
+    # command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm start'
 
       
     
