--- a/RN/package.json
+++ b/RN/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
     "expo-modules-core": "^1.0.4",
+    "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
