--- a/RN/package.json
+++ b/RN/package.json
@@ -36,6 +36,7 @@
     "react-devtools": "^4.26.1",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-web": "~0.18.7",
