--- a/RN/package.json
+++ b/RN/package.json
@@ -23,6 +23,7 @@
     "expo": "~46.0.7",
     "expo-asset": "~8.6.1",
     "expo-av": "~12.0.4",
+    "expo-checkbox": "~2.2.0",
     "expo-constants": "~13.2.3",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
