--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     hostname: backend-dev
     env_file:
       - .env
+    environment:
+      - TZ=Asia/Seoul
     expose:
       - "3000"
     ports:
