--- a/RN/package.json
+++ b/RN/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^1.1.3",
-    "expo": "~46.0.7",
+    "expo": "^47.0.12",
     "expo-asset": "~8.6.1",
     "expo-av": "~12.0.4",
     "expo-checkbox": "~2.2.0",
@@ -28,16 +28,17 @@
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
     "expo-modules-core": "^1.0.4",
+    "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
-    "expo-updates": "^0.15.6",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-devtools": "^4.26.1",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-web": "~0.18.7",
