--- a/RN/package.json
+++ b/RN/package.json
@@ -41,6 +41,7 @@
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.5"
