--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production PORT=3000 pm2-docker start app.js",
-    "test": "node app.js"
+    "test": "NODE_ENV=test node app.js"
   },
   "repository": {
     "type": "git",
