feat : push-notification 설정

--- a/RN/app.json
+++ b/RN/app.json
@@ -28,6 +28,7 @@
         "RECORD_AUDIO"
       ],
       "softwareKeyboardLayoutMode": "pan",
+      "googleServicesFile": "./google-services.json",
       "versionCode": 8
     },
     "web": {
