--- a/node/package.json
+++ b/node/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/barrierfree-nimo/Nimo#readme",
   "dependencies": {
+    "axios": "^1.3.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "firebase": "^9.15.0",
