push-notification 로직 변경

--- a/RN/app.json
+++ b/RN/app.json
@@ -27,6 +27,15 @@
       "permissions": [
         "RECORD_AUDIO"
       ],
+      "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./src/assets/icons/notification/ic_notification.png",
+          "color": "#ffffff"
+        }
+      ]
+    ],
       "softwareKeyboardLayoutMode": "pan",
       "googleServicesFile": "./google-services.json",
       "versionCode": 8
