--- a/RN/app.json
+++ b/RN/app.json
@@ -8,7 +8,7 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./src/assets/images/logo.png",
+      "image": "./src/assets/images/img_splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -26,7 +26,9 @@
       "package": "com.nimo.phishingvaccine",
       "permissions": [
         "RECORD_AUDIO"
-      ]
+      ],
+      "softwareKeyboardLayoutMode": "pan",
+      "versionCode": 8
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
@@ -37,5 +39,8 @@
       }
     },
     "owner": "phishing-vaccine"
+  },
+  "androidStatusBar": {
+    "backgroundColor": "#00284E"
   }
 }
