--- a/RN/package.json
+++ b/RN/package.json
@@ -38,9 +38,12 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.1.3",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.5"
