--- a/RN/package.json
+++ b/RN/package.json
@@ -25,9 +25,11 @@
     "expo-av": "~12.0.4",
     "expo-checkbox": "~2.2.0",
     "expo-constants": "~13.2.3",
+    "expo-device": "~5.0.0",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
     "expo-modules-core": "^1.0.4",
+    "expo-notifications": "~0.17.0",
     "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
